# dd-pointerAnalyzer

./: LICENSE  README.md  Vagrantfile  bootstrap.sh
doop/: last-analysis  query.sh  run.py
doop/logic/: context-sensitive.logic
doop/logic/1-call-site-sensitive+heap+SL/: analysis.logic  heuristic_ICSE21.logic  heuristic_OOPSLA21.logic  heuristic_sobj.logic  macros.logic
infer/: README.md
infer/src/: Clients.ml  Domain.ml  Fixpoint.ml  Main.ml  Program.ml  TransferFunction.ml  Vocab.ml  dune
